cluster/manifests/knative-eventing/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: eventing-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: knative-eventing
      app.kubernetes.io/component: eventing-controller
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: eventing-webhook
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: knative-eventing
      app.kubernetes.io/component: eventing-webhook
  mtls:
    mode: PERMISSIVE # AdmissionWebhook
